<resources>
    <string name="app_name">ZenV</string>
    <string name="your_password">Your password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="input_your_email_here">Input your email here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_your_password">Create your password</string>
    <string name="confirm_the_password">Confirm the password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_1">fragment_1</string>
    <string name="fragment2">Fragment2</string>
    <string name="fragment1">Fragment1</string>
</resources>